cmake_minimum_required (VERSION 2.6)


file( GLOB Chrono_Sources src/*.cpp )

include_directories( ../../ )

add_library(  BOOST_CHRONO_LIB ${Chrono_Sources} )

set( MY_BOOST_LIBS ${MY_BOOST_LIBS} BOOST_CHRONO_LIB PARENT_SCOPE )

install(TARGETS 
 BOOST_CHRONO_LIB LIBRARY DESTINATION "lib"
  ARCHIVE DESTINATION "lib")

#set_property(TARGET BOOST_CHRONO_LIB APPEND PROPERTY COMPILE_FLAGS ${MY_BOOST_COMPILE_FLAGS} )	
#set_property(TARGET BOOST_CHRONO_LIB APPEND PROPERTY COMPILE_DEFINITIONS ${MY_BOOST_DEFINITIONS} )

